<resources>
    <string name="app_name">Max Speed Tracker</string>
    <string name="action_settings">Settings</string>
    <string name="track_number">Track #%1$d</string>
    <string name="max_speed">Max Speed: %1$s</string>
    <string name="show_history">Show History</string>
    <string name="no_current_tracks">No Current Tracks</string>
    <string name="kph">KM/H</string>
    <string name="mph">M/H</string>
    <string name="mps">M/S</string>
    <string name="clear_history">Clear History</string>
    <string name="history_cleared">History cleared</string>
    <string name="status_tracking">Tracking</string>
    <string name="status_paused">Paused</string>
    <string name="title_activity_settings">Settings</string>

    <!-- General settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_speed_units">Speed Units</string>
    <string-array name="speed_units_titles">
        <item>Kilometers per hour</item>
        <item>Miles per hour</item>
        <item>Meters per second</item>
    </string-array>
    <string-array name="speed_units_values">
        <item>kph</item>
        <item>mph</item>
        <item>mps</item>
    </string-array>
    <string name="speed_units_default">kph</string>
    <string name="pref_enable_history">Enable History</string>
    <string name="pref_description_enable_history">Record your previous tracks</string>

    <!-- Location settings -->
    <string name="pref_header_location">Location</string>
    <string name="pref_mode">Mode</string>
    <string-array name="pref_mode_titles">
        <item>High accuracy</item>
        <item>Wifi and cellular networks</item>
        <item>GPS only</item>
    </string-array>
    <string-array name="pref_mode_values">
        <item>2</item>
        <item>1</item>
        <item>0</item>
    </string-array>
    <string name="pref_mode_default">2</string>
    <string name="pref_location_time">Time Interval (in seconds)</string>
    <string name="pref_location_time_default">5</string>
    <string name="pref_location_distance">Distance Interval (in meters)</string>
    <string name="pref_location_distance_default">1</string>

</resources>
