<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="@string/pref_mode_default"
        android:entries="@array/pref_mode_titles"
        android:entryValues="@array/pref_mode_values"
        android:key="location_mode"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_mode" />

    <EditTextPreference
        android:defaultValue="@string/pref_location_time_default"
        android:inputType="number"
        android:key="location_time"
        android:title="@string/pref_location_time" />

    <EditTextPreference
        android:defaultValue="@string/pref_location_distance_default"
        android:inputType="number"
        android:key="location_distance"
        android:title="@string/pref_location_distance" />

</PreferenceScreen>
