<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!--
       General:
         - Speed Units
         - Save history

       Location Settings:
         - Mode
           - High accuracy
           - Wifi and cellular networks
           - GPS only
         - Location interval (seconds)
     -->

    <ListPreference
        android:key="speed_units"
        android:title="@string/pref_speed_units"
        android:defaultValue="@string/speed_units_default"
        android:entries="@array/speed_units_titles"
        android:entryValues="@array/speed_units_values"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null" />

    <SwitchPreference
        android:key="enabled_history"
        android:title="@string/pref_enable_history"
        android:summary="@string/pref_description_enable_history"
        android:defaultValue="true" />

</PreferenceScreen>
